# chat-langchain

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: clear-and-update-index.yml  deploy-cloud-run.yaml  lint.yml  update-index.yml  update_kaggle_dataset.yml
backend/: chain.py  constants.py  graph.py  ingest.py  main.py
frontend/: install_yarn.sh  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: ChatMessageBubble.tsx  ChatWindow.tsx
frontend/app/hooks/: useThreadList.ts
frontend/app/utils/: constants.tsx
