[tool.poetry]
name = "chat-langchain"
version = "0.1.2"
description = ""
authors = ["SN <6432132+samnoyes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = ">=0.2.0"
langsmith = "^0.1.89"
langchain-cohere = ">=0.1.5,<0.2.0"
langchain-community = "^0.2.7"
langchain-openai = ">=0.1.7,<0.2.0"
langchain-google-genai = ">=1.0.5,<2.0.0"
langchain-anthropic = "^0.1.13"
langchain-fireworks = "^0.1.3"
langchain-weaviate = "^0.0.2"
langchain-groq = "^0.1.6"
langgraph = ">=0.1.0,<0.2.0"
langserve = {extras = ["server"], version = "^0.0.39"}
beautifulsoup4 = "^4.12.2"
weaviate-client = "^4.0.0"
lxml = "^4.9.3"
voyageai = "^0.1.4"
pillow = "^10.2.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"
langchain-huggingface = "^0.0.3"
langchain-pinecone = "^0.1.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
